Changed facet filter buckets render length. Only top 10 most used filters will be shown in the left panel. Fixed the overflow issue of tags-container component for longer tag name

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
@@ -86,8 +86,8 @@
 .w-max-1080 {
   max-width: 1080px;
 }
-.w-500 {
-  width: 500px;
+.w-max-80vw {
+  max-width: 80vw;
 }
 .w-300 {
   width: 300px;
